Fix a problem with thumbnails not wrapping soon enough

--- a/css/style.css
+++ b/css/style.css
@@ -207,7 +207,7 @@ hr {
 
 /* this is for each flex child item */
 .project-entry {
-  width: 30%;
+  width: 270px;
   padding: 10px;
   text-align: center;
 }
